feat(home): Home page and list of recipes.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" href="https://unpkg.com/tachyons/css/tachyons.min.css">
 <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/liberation-mono" type="text/css" />
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/dancing" type="text/css" />
 
 <style>
   html,
@@ -14,5 +15,13 @@
     font-family: 'LiberationMonoRegular';
     font-weight: normal;
     font-style: normal;
+  }
+
+  .handwrite {
+    font-family: 'DancingScriptRegular';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 1.2rem;
+    color: blue;
   }
 </style>
