--- a/layouts/recipes/single.html
+++ b/layouts/recipes/single.html
@@ -8,18 +8,20 @@
     <header class="tc ttu">
       <h1 class="f1 measure center" itemprop="name">{{ .Title }}</h1>
       <h3 class="f3 measure center">{{ .Params.Subtitle }}</h3>
+      <h3 class="f3 measure center">********************</h3>
+
     </header>
 
     <div class="w-100 h-100 flex flex-wrap flex-auto flex-row-l flex-column">
       <div class="h-100-l order-1-l order-2 flex-grow-1 pv4 pl6">
-        {{ range .Params.Components }}
+        {{ range .Params.Subcomponents }}
         {{ partial "recipes/method_item" . }}
         {{ end }}
 
         {{ partial "recipes/method_item" .Params }}
       </div>
       <div class="h-100-l order-2-l order-1 flex-grow-1 pa4">
-        {{ range .Params.Components }}
+        {{ range .Params.Subcomponents }}
         {{ partial "recipes/ingredients_item" . }}
         {{ end }}
 
@@ -27,8 +29,11 @@
       </div>
     </div>
 
-    <div class="center">
+    <div class="tc center">
       <div class="tc" itemprop="description">{{.Content}}</div>
+
+      <img src="{{ .Params.sourceIMG | absURL }}" class="w-100 tc dib br4 dib measure f3"
+        style=" filter: grayscale(100%);" />
     </div>
   </article>
 </div>
