--- a/layouts/partials/recipes/ingredients_item.html
+++ b/layouts/partials/recipes/ingredients_item.html
@@ -1,9 +1,9 @@
 <h4 class="f5 measure underline">{{ .title }}</h4>
 <div class="sm-col sm-col-6 lg-col-6">
   <ul itemprop="ingredients">
-    {{ if ne .components nil }}
-    {{ range .components }}
-    <li itemprop="recipeIngredient" class="i">
+    {{ if ne .subcomponents nil }}
+    {{ range .subcomponents }}
+    <li itemprop="recipeIngredient" class="underline">
       {{ with ( .title | markdownify) }}{{ . }}{{ end }}</li>
     {{ end }}
     {{ end }}
