--- a/layouts/partials/recipes/method_item.html
+++ b/layouts/partials/recipes/method_item.html
@@ -2,7 +2,7 @@
 <h4 class="f4 measure underline">{{ .title }}</h4>
 <ol class="sm-col sm-col-6 lg-col-6" itemprop="recipeInstructions">
   {{ range .directions }}
-  <li class="measure pb4">
+  <li class="measure mb4">
     {{ with ( . | markdownify) }}{{ . }}{{ end }}</li>
   {{ end }}
 </ol>
