--- a/layouts/recipes/list.html
+++ b/layouts/recipes/list.html
@@ -1,17 +1,23 @@
 {{ define "content" }}
 <main>
-  <article>
-    <header>
-      <h1>{{.Title}}</h1>
+  <article class="cf ph3 ph5-ns pv5">
+    {{ range .Pages.GroupByParam "Category" }}
+    <header class="fn fl-ns w-30-ns pr4-ns">
+      <h1 class="mb3 mt0 lh-title ttu">{{ .Key }}</h1>
     </header>
-    {{.Content}}
-  </article>
-  <ul>
-    {{ range .Pages }}
-    <li>
-      <a href="{{.Permalink}}">{{.Title}}</a>
-    </li>
+    <div class="fn fl-ns w-70-ns">
+      <dl class="lh-title pb4 mt0 ttu">
+        {{ range .Pages }}
+        <dt class="f4 b"> <a href="{{.Permalink}}" class="link black hover-bg-light-yellow">{{.Title}}</a></dt>
+        <dd class="ml0 pb3">{{.Params.Subtitle}}</dd>
+        {{ end }}
+
+      </dl>
+    </div>
     {{ end }}
-  </ul>
+
+    <div>
+      {{.Content}}
+    </div>
 </main>
 {{ end }}
