--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,8 @@
-<nav class="pa2">
+<nav class="pa2 noprint">
   <a class="link dim black b f6 f5-ns dib mr3" href="{{ relURL "/" }}" title="Home">{{ .Site.Title }}</a>
+  {{/*
   <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="Categories">Categories</a>
   <a class="link dim gray    f6 f5-ns dib mr3" href="#" title="Tags">Tags</a>
   <a class="link dim gray    f6 f5-ns dib" href="#" title="Search">Search</a>
+  */}}
 </nav>
