--- a/layouts/partials/recipes/ingredients_item.html
+++ b/layouts/partials/recipes/ingredients_item.html
@@ -1,5 +1,5 @@
 <h4 class="f5 measure underline">{{ .title }}</h4>
-<div class="sm-col sm-col-6 lg-col-6">
+<div class="sm-col sm-col-6 lg-col-6 pb2">
   <ul itemprop="ingredients">
     {{ if ne .subcomponents nil }}
     {{ range .subcomponents }}
