feat(tags): Excellent! tag

--- a/layouts/partials/recipes/glossary.html
+++ b/layouts/partials/recipes/glossary.html
@@ -14,7 +14,7 @@
       separateWordSearch: false,
       each: (markAnchor) => {
         var span = document.createElement('span');
-        span.className = "handwrite"
+        span.className = "handwrite f4"
         span.innerText = " (" + t["translation"] + ")";
         markAnchor.insertAdjacentElement("afterend", span)
       }
