style(recipe): Crooked handwriting and header fix

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,4 +36,14 @@
     font-style: normal;
     color: blue;
   }
+
+  .crooked-1 {
+    position: absolute;
+    transform: rotate(5deg);
+  }
+
+  .crooked-2 {
+    position: absolute;
+    transform: rotate(10deg);
+  }
 </style>
