--- a/layouts/recipes/single.html
+++ b/layouts/recipes/single.html
@@ -8,8 +8,8 @@
       <h3 class="f3 measure center">********************</h3>
     </header>
 
-    {{ if in .Params.tags "Excellent" }}<h2 class="absolute top-0 right-0 pt4 pr4 pr7-l handwrite f2"
-      style="transform: rotate(10deg);">excellent!</h2>{{ end }}
+    {{ if in .Params.tags "Excellent" }}<h2
+      class="absolute top--2 top--1-l right-0 pt4 pr4 pr7-l handwrite crooked-2 f2">excellent!</h2>{{ end }}
 
     <div class="w-100 h-100 flex flex-wrap flex-auto flex-row-l flex-column justify-center">
       <div class="h-100-l order-1-l order-2 ph4 pb4">
@@ -19,7 +19,7 @@
 
         {{ partial "recipes/method_item" .Params }}
       </div>
-      <div class="w-30-l h-100-l order-2-l order-1 ph4 pb4">
+      <div class="w-30-l h-100-l order-2-l order-1 ph4 pb4-l">
         {{ range .Params.Subcomponents }}
         {{ partial "recipes/ingredients_item" . }}
         {{ end }}
