--- a/layouts/recipes/single.html
+++ b/layouts/recipes/single.html
@@ -37,5 +37,6 @@
   </article>
 </div>
 
-{{ partialCached "recipes/glossary" . }}
+{{ partialCached "recipes/translator" . }}
+{{ partialCached "recipes/unit_converter" . }}
 {{ end}}
