--- a/layouts/recipes/list.html
+++ b/layouts/recipes/list.html
@@ -8,7 +8,8 @@
     <div class="fn fl-ns w-70-ns">
       <dl class="lh-title pb4 mt0 ttu">
         {{ range .Pages }}
-        <dt class="f4 b"> <a href="{{.Permalink}}" class="link black hover-bg-light-yellow">{{.Title}}</a>
+        <dt class="f4 b"> <a href="{{.Permalink}}" class="link black hover-bg-light-yellow">{{.Title}}
+            #{{.Params.sourceLocation}}</a>
           {{ if in .Params.tags "Excellent" }}
           <span class="relative pl3">
             <span class="handwrite crooked-1 ttl f3" style="top: -0.5rem">excellent!</span>
@@ -21,7 +22,7 @@
     </div>
     {{ end }}
 
-    <div>
+    <div class="fl noprint" style="filter: grayscale(100%);">
       {{.Content}}
     </div>
 </main>
