--- a/layouts/recipes/single.html
+++ b/layouts/recipes/single.html
@@ -1,3 +1,7 @@
+{{ define "title" }}
+{{ .Title }} - {{ .Site.Title }}
+{{ end }}
+
 {{ define "content" }}
 
 <div class="center" itemscope itemtype="http://schema.org/Recipe">
